# lepton_jpeg_rust

./: .gitignore  Cargo.toml  DESIGN.md  NOTICE.txt  README.md  azure-pipelines.yml  b.rs  rustfmt.toml
.cargo/: config.avx2.toml  config.toml
.config/1espt/: PipelineAutobaseliningConfig.yml
.config/guardian/: .gdnbaselines
.github/workflows/: pubishwheels.yml  publish.yml  publish_python.xml  publishwheels.yml  rust.yml
azurefn/: Cargo.toml
benches/: benches.rs
dll/: Cargo.toml
dll/src/: lib.rs
fuzz/: Cargo.toml
fuzz/.cargo/: config.toml
fuzz/artifacts/fuzz_target_1/: crash-02c8b27187260bd5ef9561fd60b3dad3ab5992be
fuzz/fuzz_targets/: fuzz_target_1.rs
hyper/: Cargo.toml
hyper/azurefn/: host.json  local.settings.json
hyper/azurefn/uncompress/: function.json
hyper/src/: main.rs
images/: android.lep  androidcrop.lep  androidcropoptions.lep  androidprogressive.lep  androidprogressive_garbage.lep  androidtrail.lep  cathedral_db_non_int.lep  cathedral_db_non_int_rustold.lep  colorswap.lep  eof_and_trailinghdrdata.lep  eof_and_trailingrst.lep  gray2sf.lep  grayscale.lep  half_scan.lep  half_scan_rust55.lep  iphone.lep  iphonecity.lep  iphonecity_with_16KGarbage.lep  iphonecity_with_16KGarbage.lepoutput  iphonecity_with_1MGarbage.lep  iphonecrop.lep  iphonecrop2.lep  iphoneprogressive.lep  iphoneprogressive2.lep  mathoverflow_16.lep  mathoverflow_32.lep  mathoverflow_scalar.lep  narrowrst.lep  nofsync.lep  out_of_order_dqt.lep  pixelated.lep  progressive_late_dht.lep  slrhills.lep  slrindoor.lep  tiny.lep  trailingrst.lep  trailingrst2.lep  trailingrst_missing_in_jpg.lep  trunc.lep  truncate4.lep  (+5 more)
lib/: Cargo.toml
lib/src/: consts.rs  enabled_features.rs  helpers.rs  lepton_error.rs  lib.rs  metrics.rs  micro_benchmark.rs
lib/src/jpeg/: bit_reader.rs  bit_writer.rs  block_based_image.rs  component_info.rs  jpeg_code.rs  jpeg_header.rs  jpeg_position_state.rs  jpeg_read.rs  jpeg_write.rs  row_spec.rs  truncate_components.rs
lib/src/structs/: block_context.rs  branch.rs  idct.rs  incremental_read.rs  lepton_decoder.rs  lepton_encoder.rs  lepton_file_reader.rs  lepton_file_writer.rs  lepton_header.rs  mod.rs  model.rs  multiplexer.rs  neighbor_summary.rs  partial_buffer.rs  probability_tables.rs  quantization_tables.rs  simple_hash.rs  simple_threadpool.rs  thread_handoff.rs  vpx_bool_reader.rs  vpx_bool_writer.rs
package/: Lepton.Jpeg.Rust.nuspec
python/: Cargo.toml  README.md  pyproject.toml
python/src/: lib.rs
python/tests/: test_compress.py
src/: consts.rs  enabled_features.rs  helpers.rs  jpeg_code.rs  lepton_error.rs  lib.rs  main.rs  metrics.rs
src/jpeg/: bit_reader.rs  bit_writer.rs  block_based_image.rs  component_info.rs  jpeg_header.rs  jpeg_position_state.rs  jpeg_read.rs  jpeg_write.rs  mod.rs  row_spec.rs  truncate_components.rs
src/structs/: bit_reader.rs  bit_writer.rs  block_based_image.rs  block_context.rs  branch.rs  component_info.rs  div.rs  idct.rs  jpeg_header.rs  jpeg_position_state.rs  jpeg_read.rs  jpeg_write.rs  lepton_decoder.rs  lepton_encoder.rs  lepton_file_read.rs  lepton_file_reader.rs  lepton_file_write.rs  lepton_file_writer.rs  lepton_format.rs  lepton_header.rs  libdivide.rs  mod.rs  model.rs  multiplexer.rs  neighbor_summary.rs  partial_buffer.rs  probability_tables.rs  probability_tables_coefficient_context.rs  probability_tables_set.rs  quantization_tables.rs  row_spec.rs  simple_hash.rs  simple_threadpool.rs  thread_handoff.rs  truncate_components.rs  vpx_bool_reader.rs  vpx_bool_writer.rs
tests/: end_to_end.rs  verifycompression.cmd  verifydir.cmd
ttlb/src/: main.rs
util/: Cargo.toml
util/src/: main.rs  verifydir.rs
