[package]
name = "lepton_jpeg_root"
version = "0.5.2"
edition = "2021"
authors = ["Kristof Roomp <kristofr@microsoft.com>"]

[profile.release]
debug=true

[workspace]
members = ["lib","dll","util"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lepton_jpeg = { path = "lib" }

[dev-dependencies]
rstest = "0.22"
rand = "0.8"
rand_chacha = "0.3"
siphasher = "1"



