[package]
name = "lepton_jpeg_root"
version = "0.5.6"
edition = "2024"
authors = ["Kristof Roomp <kristofr@microsoft.com>"]

[profile.release]
debug = true
lto = true

[workspace]
members = ["lib", "dll", "util", "python"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
lepton_jpeg = { path = "lib", features = ["micro_benchmark"] }
rstest = "0.22"
rand = "0.8"
rand_chacha = "0.3"
siphasher = "1"
criterion = "0.7"

[[bench]]
name = "benches"
harness = false