[package]
name = "lepton_jpeg_dll"
version = "0.5.6"
edition = "2024"
authors = ["Kristof Roomp <kristofr@microsoft.com>"]

[dependencies]
lepton_jpeg = { path = "../lib" }
rayon = "1"
msvc_spectre_libs = "0.1.3"

[dev-dependencies]
rstest = "0.22"

[lib]
crate-type = ["cdylib"]
name = "lepton_jpeg"