[package]
name = "lepton_jpeg_hyper"
version = "0.1.0"
edition = "2024"
description = "Hyper-based HTTP server for Lepton JPEG encoding/decoding"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
lepton_jpeg = { path = "../lib" }
