[package]
name = "lepton_jpeg"
version = "0.5.6"
edition = "2024"
authors = ["Kristof Roomp <kristofr@microsoft.com>"]

# requires scoped threads, IsTerminal, let chains
rust-version = "1.89"
description = "Rust port of the Lepton lossless JPEG compression library"
readme = "../README.md"
repository = "https://github.com/microsoft/lepton_jpeg_rust"
license = "Apache-2.0"

categories = ["multimedia::images", "multimedia::encoding", "compression"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
compression_stats = []
detailed_tracing = []

# used to expose internal functions for micro benchmarking
micro_benchmark = []

[dependencies]
bytemuck = "1"
byteorder = "1.4"
flate2 = "1.0"
default-boxed = "0.2"
wide = "0.8"
log = "0.4"
git-version = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
cpu-time = "1.0"
thread-priority = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
thread-priority = "1.0"

[dev-dependencies]
rand = "0.8"
rand_chacha = "0.3"
siphasher = "1"

[lib]
crate-type = ["lib"]
