[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "lepton_jpeg_python"
version = "0.5.5"
description = "Rust port of the Lepton JPEG compression library"
authors = [{ name = "Kristof Roomp  ", email = "kristofr@gmail.com" }]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/microsoft/lepton_jpeg_rust"
