[package]
name = "lepton_jpeg_util"
version = "0.5.8"
edition = "2024"
authors = ["Kristof Roomp <kristofr@microsoft.com>"]

[features]
default = []

[dependencies]
lepton_jpeg = { path = "../lib" }
pico-args = "0.5"
log = "0.4"
simple_logger ="5.0"
rayon = "1" 
uuid = { version = "1.19", features = ["v4"] }
winpipe = "0.1"
msvc_spectre_libs = "0.1.3"

[[bin]]
name="lepton_jpeg_util"


